--- a/pdfread/requirements.txt
+++ b/pdfread/requirements.txt
@@ -1,3 +1,21 @@
+atomicwrites==1.3.0
+attrs==19.1.0
+beautifulsoup4==4.7.1
+colorama==0.4.1
+importlib-metadata==0.18
+more-itertools==7.1.0
+packaging==19.0
+pdfminer3k==1.3.1
 Pillow==6.1.0
+pluggy==0.12.0
+ply==3.11
+py==1.8.0
+PyMuPDF==1.14.19
+pyparsing==2.4.0
 PyPDF2==1.26.0
+pytest==5.0.1
 pyzbar==0.1.8
+six==1.12.0
+soupsieve==1.9.2
+wcwidth==0.1.7
+zipp==0.5.2
